<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.addstory.AddStoryActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        
        <ImageView
            android:id="@+id/img_add_photo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:background="#E0E0E0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_open_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/open_gallery"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/btn_open_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/open_camera"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_add_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="5"
                android:hint="description"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_upload_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="20dp"
            android:text="@string/upload_story"/>
    </LinearLayout>

</ScrollView>